[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Bartosz Różański <bartek.roza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
solana = "^0.24.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
